--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,3 +6,16 @@
 h2{
     color:darkblue;
 }
+
+.myRedclass
+{
+color:red;
+}
+.first
+{
+    color:green;
+}
+.second
+{
+    font-size: xx-large;
+}
