--- a/src/app/app.html
+++ b/src/app/app.html
@@ -73,4 +73,9 @@ Item #{{ idx }}: {{ item.name }} {{e}}-{{o}}-{{first}}--{{last}}--{{count}}<br>
  <h1 [class]="xyz">hello2</h1> <!-- right -->
 <span [class]="boomboom">dream come true</span>
 <p [class]="firstclassArray">class Array Example</p>
+<p [class]="firstclassObj">great deal</p>
+<p [style]="firstStyle">Hello Style</p>
+<p [style.color]="secondStyle">Second Style</p>
+<input type="text" [(ngModel)]="UserName">
+{{UserName}}
 <x></x>
