--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,17 +1,22 @@
 
 
-<ul class="nav">
+<ul class="nav">  
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
+    <a class="nav-link" aria-current="page" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/about">About</a>
+    <a class="nav-link" [routerLink]="['/about',1,'sample']" [queryParams]="{page:1,search:'Gamini'}" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">About</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/contact">Contact</a>
+    <a class="nav-link" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">Contact</a>
   </li>
    
 </ul>
+
+
 
 <div class="container-fluid">
 <router-outlet></router-outlet>
