committed params and query params

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,4 +1,10 @@
 <p>about works!</p>
 
+<p>PAth params</p>
 {{user.id}}<br>
 {{user.name}}
+
+<br>
+<p>Query params</p>
+{{Query.page}}<br>
+{{Query.search}}
