--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -1,1 +1,8 @@
 <h1>contact works!</h1>
+
+
+<a [routerLink]="['/contact',1,'Anjali']">Anjali</a><br>
+<a [routerLink]="['/contact',2,'Rahul']">Rahul</a><br>
+<a [routerLink]="['/contact',3,'Rani']">Rani</a><br>
+
+<router-outlet></router-outlet>
