--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -5,6 +5,10 @@
     <a class="nav-link" aria-current="page" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">Home</a>
   </li>
+   <li class="nav-item">
+    <a class="nav-link" aria-current="page" routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">Login</a>
+  </li>
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/about',1,'sample']" [queryParams]="{page:1,search:'Gamini'}" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">About</a>
