components Guard Sevice

--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -17,6 +17,10 @@ true}">About</a>
     <a class="nav-link" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">Contact</a>
   </li>
+   <li class="nav-item">
+    <a class="nav-link" routerLink="/testDeactivate" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">testDeactivate</a>
+  </li>
    
 </ul>
 
