Directive and PArentToChild Componet

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -123,5 +123,7 @@ Item #{{ idx }}: {{ item.name }} {{e}}-{{o}}-{{first}}--{{last}}--{{count}}<br>
   <li>{{sport.name}}</li>
 </ul>
 </div>
-
+<div appAppHighlightTextDirectives>Hello Directives</div>
+<div appRedTextHighlightColor>Great wall of Directives</div>
+ <app-hero [parentData]="Hero"></app-hero> <!--app-hero child component parentData is input -->
 <x></x>
