--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -21,6 +21,10 @@ true}">Contact</a>
     <a class="nav-link" routerLink="/testDeactivate" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">testDeactivate</a>
   </li>
+   <li class="nav-item">
+    <a class="nav-link" routerLink="/user" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">userApp</a>
+  </li>
    
 </ul>
 
