--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -25,7 +25,10 @@ true}">testDeactivate</a>
     <a class="nav-link" routerLink="/user" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">userApp</a>
   </li>
-   
+    <li class="nav-item">
+    <a class="nav-link" routerLink="/pipe" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">Pipe Example</a>
+  </li>
 </ul>
 
 
