--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -29,6 +29,10 @@ true}">userApp</a>
     <a class="nav-link" routerLink="/pipe" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">Pipe Example</a>
   </li>
+      <li class="nav-item">
+    <a class="nav-link" routerLink="/signalEx" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">signalEx</a>
+  </li>
 </ul>
 
 
