--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -33,6 +33,14 @@ true}">Pipe Example</a>
     <a class="nav-link" routerLink="/signalEx" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">signalEx</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/signalCompox1" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">signalCompox1</a>
+  </li>
+ <li class="nav-item">
+    <a class="nav-link" routerLink="/signalCompox2" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">signalCompox1</a>
+  </li>
 </ul>
 
 
