--- a/src/app/aggrid-example-component/aggrid-example-component.html
+++ b/src/app/aggrid-example-component/aggrid-example-component.html
@@ -4,6 +4,7 @@
 style="width: 600px; height: 300px;"
 [rowData]="rowData"
 [columnDefs]="columnDefs"
-class="ag-theme-angular"></ag-grid-angular>
+class="ag-theme-angular">
+</ag-grid-angular>
 
 
